--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "debug": "node --inspect index",
+    "warnings": "node --trace-warnings index"
   },
   "keywords": [],
   "author": "",
@@ -14,6 +16,7 @@
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "humanoid-js": "^1.0.1",
     "multer": "^1.4.3",
     "nodemon": "^2.0.14",
     "uuid": "^8.3.2"
