In progress of reconstrunction Uninstalled useless packages

--- a/package.json
+++ b/package.json
@@ -14,14 +14,9 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.26.1",
-    "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "humanoid-js": "^1.0.1",
-    "multer": "^1.4.3",
-    "node-fetch": "^2.6.7",
-    "nodemon": "^2.0.14",
-    "uuid": "^8.3.2"
+    "nodemon": "^2.0.14"
   }
 }
