--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,7 @@
   "name": "backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "devDependencies": {
     "nodemon": "^2.0.20"
   },
