--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
     "@mantine/hooks": "^5.8.2",
     "@mantine/modals": "^5.7.1",
     "@mantine/notifications": "^5.8.2",
-    "@tanstack/react-query": "^4.16.1",
+    "@tanstack/react-query": "^4.19.1",
+    "apexcharts": "^3.36.3",
     "axios": "^1.1.3",
     "embla-carousel-react": "^7.0.5",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3"
   },
