--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.1.3",
     "embla-carousel-react": "^7.0.5",
     "leaflet": "^1.9.3",
+    "leaflet-fullscreen": "^1.0.2",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -30,6 +31,7 @@
     "react-router-dom": "^6.4.3"
   },
   "devDependencies": {
+    "@types/leaflet-fullscreen": "^1.0.6",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
